src/objects/pse__Project_Task_Assignment__c.object
<CustomObject>
    <customHelpPage>pse__ProjectTaskAssignmentHelp</customHelpPage>
    <description>Project task assignments are distinct from standard assignments. They associate a resource or resource role (for example, Project Manager) with a project task. Project tasks have a master-detail relationship with project task assignments.</description>
    <fields>
        <fullName>ActualCost__c</fullName>
        <label>Actual Cost</label>
        <summarizedField>ActualCost__c.Amount__c</summarizedField>
        <summaryForeignKey>ActualCost__c.ProjectTaskAssignment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AssignedtoMe__c</fullName>
        <formula>IF(  pse__Resource__r.pse__Salesforce_User__c  = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to Me</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpenditureType__c</fullName>
        <label>Expenditure Type</label>
        <picklist>
            <picklistValues>
                <fullName>Subcontractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ODC/FEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contingency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labor/Person</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectRoleTitle__c</fullName>
        <label>Project Role Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Do not enter a value. This field will automatically populate with an assignment.</inlineHelpText>
        <label>Assignment</label>
        <referenceTo>pse__Assignment__c</referenceTo>
        <relationshipLabel>Project Task Assignments</relationshipLabel>
        <relationshipName>Project_Task_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <formula>IF(
  NOT(ISBLANK(pse__Assignment__c)),
  pse__Assignment__r.pse__End_Date__c,
  IF(NOT(ISBLANK(pse__Resource_Request__r.pse__Preferred_Schedule__c)),
     pse__Resource_Request__r.pse__Preferred_Schedule__r.pse__End_Date__c,
     pse__Resource_Request__r.pse__End_Date__c 
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__External_Resource__c</fullName>
        <inlineHelpText>A non-PSE resource that is assigned to the project task</inlineHelpText>
        <label>External Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Hours__c</fullName>
        <description>The number of scheduled hours.</description>
        <formula>IF( AND(NOT(ISBLANK(pse__Assignment__c)), NOT(ISBLANK(pse__Assignment__r.pse__Scheduled_Hours__c)) ),
pse__Assignment__r.pse__Scheduled_Hours__c, 
 IF( NOT(ISBLANK(pse__Resource_Request__c)), IF( AND( NOT(ISBLANK(pse__Resource_Request__r.pse__Preferred_Schedule__c)), NOT(ISBLANK( pse__Resource_Request__r.pse__Preferred_Schedule__r.pse__Scheduled_Hours__c)) ), 
pse__Resource_Request__r.pse__Preferred_Schedule__r.pse__Scheduled_Hours__c, 
 IF( NOT(ISBLANK(pse__Resource_Request__r.pse__SOW_Hours__c)), pse__Resource_Request__r.pse__SOW_Hours__c, 0) ), 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of scheduled hours from a related Assignment (if one exists) or, if a Related Resource exists, either the number of hours associated with the Related Resource&apos;s Preferred Schedule or the requested number of hours.</inlineHelpText>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Project_ID__c</fullName>
        <formula>pse__Project_Task__r.pse__Project__c</formula>
        <label>Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project_Task_End_Date__c</fullName>
        <formula>pse__Project_Task__r.pse__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Task End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Project_Task_Start_Date__c</fullName>
        <formula>pse__Project_Task__r.pse__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Task Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Project_Task__c</fullName>
        <description>Project Task to which the Resource is being Associated</description>
        <inlineHelpText>Project Task to which the Resource is being Associated</inlineHelpText>
        <label>Project Task</label>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>Project Task Assignments</relationshipLabel>
        <relationshipName>Project_Task_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <formula>IF(OR(ISNULL(pse__Project_Task__c),(pse__Project_Task__c=&apos;&apos;),ISNULL(pse__Project_Task__r.pse__Project__c),(pse__Project_Task__r.pse__Project__c=&apos;&apos;)),&apos;&apos;,HYPERLINK(&apos;/&apos;&amp;pse__Project_Task__r.pse__Project__c,IF(OR(ISNULL(pse__Project_Task__r.pse__Project__r.Name),(pse__Project_Task__r.pse__Project__r.Name=&apos;&apos;)),pse__Project_Task__r.pse__Project__c,pse__Project_Task__r.pse__Project__r.Name)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Do not enter a value. A resource request will be created automatically with the new project task assignment.</inlineHelpText>
        <label>Resource Request</label>
        <referenceTo>pse__Resource_Request__c</referenceTo>
        <relationshipLabel>Project Task Assignments</relationshipLabel>
        <relationshipName>Project_Task_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Role__c</fullName>
        <label>Resource Role</label>
        <picklist>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discipline Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HS&amp;E Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO or Delegate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Lead 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Accountant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Accountant Alternate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Director 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Resource being associated with the Project Task</description>
        <inlineHelpText>Resource being associated with the Project Task</inlineHelpText>
        <label>Resource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.pse__Is_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Is_Resource_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active resources are shown. To display all resources, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Task Assignments</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Schedule_Type__c</fullName>
        <formula>IF(
	NOT(ISBLANK(pse__Assignment__c)),
	$Label.pse__pta_schedule_type_assignment,
		IF(NOT(ISBLANK(pse__Resource_Request__c)),
			IF(NOT(ISBLANK(pse__Resource_Request__r.pse__Preferred_Schedule__c)),
				 	$Label.pse__pta_schedule_type_rr_schedule,
		   						 	$Label.pse__pta_schedule_type_rr_dates
		   	),
		   	$Label.pse__pta_schedule_type_rr_none
		)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <formula>IF(
  NOT(ISBLANK(pse__Assignment__c)),
  pse__Assignment__r.pse__Start_Date__c,
  IF(NOT(ISBLANK(pse__Resource_Request__r.pse__Preferred_Schedule__c)),
     pse__Resource_Request__r.pse__Preferred_Schedule__r.pse__Start_Date__c,
     pse__Resource_Request__r.pse__Start_Date__c 
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Project Task Assignment</label>
    <listViews>
        <fullName>My_Project_Tasks</fullName>
        <columns>NAME</columns>
        <columns>pse__Project__c</columns>
        <columns>pse__Project_Task__c</columns>
        <columns>pse__Project_Task_End_Date__c</columns>
        <columns>pse__Project_Task_Start_Date__c</columns>
        <columns>pse__Resource__c</columns>
        <columns>pse__Resource_Role__c</columns>
        <columns>ProjectRoleTitle__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AssignedtoMe__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Project Tasks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>ProjectRoleTitle__c</columns>
        <columns>pse__Project_Task__c</columns>
        <columns>pse__Project_Task_End_Date__c</columns>
        <columns>pse__Project_Task_Start_Date__c</columns>
        <columns>pse__Resource__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PTA-{0}</displayFormat>
        <label>Project Task Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Task Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>pse__Cannot_Associate_RR_On_PTA_Creation</fullName>
        <active>true</active>
        <description>Validates whether Resource Request can be associated with Project Task Assignment on creation.</description>
        <errorConditionFormula>AND(ISNEW() ,NOT( ISBLANK(pse__Resource_Request__c)))</errorConditionFormula>
        <errorMessage>A resource request will be created automatically with the new project task assignment. Please clear the Resource Request field and try again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Cannot_Specify_Res_And_Ext_Res</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(pse__Resource__c)), NOT(LEN(pse__External_Resource__c)=0))</errorConditionFormula>
        <errorMessage>Cannot specify both Resource and External Resource</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__PTA_RR_Project_Mismatch</fullName>
        <active>true</active>
        <description>Validates whether the Project Task Assignment and Resource Request belong to the same Project.</description>
        <errorConditionFormula>AND( NOT(ISBLANK( pse__Resource_Request__c )), pse__Project_Task__r.pse__Project__c  &lt;&gt;  pse__Resource_Request__r.pse__Project__c)</errorConditionFormula>
        <errorMessage>We cannot associate a project task assignment with the resource request because they do not belong to the same project. Enter a different resource request and try again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Resc_OR_Ext_Resc_OR_Resc_Role_Required</fullName>
        <active>true</active>
        <description>Validation to check project task assignment cannot save without a Resource, External Resource or Resource Role.</description>
        <errorConditionFormula>AND(ISBLANK(pse__Resource__c),ISBLANK(pse__External_Resource__c),  ISBLANK(TEXT( pse__Resource_Role__c ))   )</errorConditionFormula>
        <errorMessage>We can&apos;t save a project task assignment without a Resource, External Resource or Resource Role.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Resource_OR_External_Resource_Required</fullName>
        <active>false</active>
        <description>[DEPRECATED]</description>
        <errorConditionFormula>AND(ISBLANK(pse__Resource__c),ISBLANK(pse__External_Resource__c))</errorConditionFormula>
        <errorMessage>Resource or External Resource is required</errorMessage>
    </validationRules>
</CustomObject>